syntax = "proto3";

package hoge.v1;


service HogeService {
    rpc Bar (BarRequest) returns (BarResponse);
    rpc Foo (FooRequest) returns (FooResponse);
}

message BarResponse {
    repeated string names = 1;
}

message BarRequest {
    repeated string names = 1;
}

message FooResponse {
    string name = 1;
    int32 age = 2;
    map<string, string> d = 3;
}

message FooRequest {
    string name = 1;
    int32 age = 2;
    map<string, string> d = 3;
}

